--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "cpp-build",
   "version": "0.0.1",
   "description": "An easy to use C++ meta build system.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "test"
+  },
+  "bin": {
+    "cpp-build": "./bin/run.js"
   },
   "repository": {
     "type": "git",
